--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-dialog-input/travel-diary-scheduler-dialog-input.component.html
@@ -36,7 +36,7 @@
 					</div>
 					<div class="col-12" *ngIf="state.isDropOffOrPickup">
 						<label for="members" class="col-form-label">
-							Who is being dropped off or picked up?</label
+							Who is being dropped off or picked up by {{respondentName}}?</label
 						>
 						<ng-select
 							appearance="outline"
