Purposes can be selected additional times to trigger dialog window

--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
@@ -27,8 +27,9 @@
 					bindLabel="label"
 					bindValue="id"
 					[ngModel]="model.purpose"
+					(ngModelChange)="purposeModelChange($event)"
 					(close)="purposeSelected($event)"
-					(change)="onPurposeChanged($event)"
+					
 				>
 					<ng-option *ngIf="definedHomeLocation" [value]="definedHomeLocation?.purpose"
 						><div class="purpose-label">
