Triplinx calls now work correctly Formatting changes TripLinx  key is stored in local config file Purpose and other misc dropdowns cannot clear their elements

--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
@@ -26,10 +26,10 @@
 					placeholder="Enter a purpose"
 					bindLabel="label"
 					bindValue="id"
+					[clearable]="false"
 					[ngModel]="model.purpose"
 					(ngModelChange)="purposeModelChange($event)"
 					(close)="purposeSelected($event)"
-					
 				>
 					<ng-option *ngIf="definedHomeLocation" [value]="definedHomeLocation?.purpose"
 						><div class="purpose-label">
@@ -42,7 +42,7 @@
 
 					<ng-option *ngFor="let school of definedSchoolLocations" [value]="school.purpose"
 						><div class="purpose-label">
-							<i class="fas fa-star star-location"></i>{{respondent.name}} - {{ school.purpose.label }}
+							<i class="fas fa-star star-location"></i>{{ respondent.name }} - {{ school.purpose.label }}
 						</div>
 						<div class="purpose-address">
 							{{ school.address | addressDisplay }}
@@ -50,7 +50,7 @@
 					>
 					<ng-option *ngFor="let work of definedWorkLocations" [value]="work.purpose"
 						><div class="purpose-label">
-							<i class="fas fa-star star-location"></i>{{respondent.name}} - {{ work.purpose.label }}
+							<i class="fas fa-star star-location"></i>{{ respondent.name }} - {{ work.purpose.label }}
 						</div>
 						<div class="purpose-address">
 							{{ work.address | addressDisplay }}
