--- a/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
+++ b/src/Traisi.Questions/src/travel-diary-scheduler/components/travel-diary-scheduler-item/travel-diary-scheduler-item.component.html
@@ -189,7 +189,7 @@
 	</div>
 </div>
 
-<traisi-travel-diary-scheduler-dialog-input #dialogInput></traisi-travel-diary-scheduler-dialog-input>
+<traisi-travel-diary-scheduler-dialog-input scheduleIndex="scheduleIndex" #dialogInput></traisi-travel-diary-scheduler-dialog-input>
 
 <div bsModal #confirmModal="bs-modal" class="modal fade" [config]="{ ignoreBackdropClick: true }" role="dialog">
 	<div class="modal-dialog modal-sm">
