--- a/src/Traisi.Questions/src/stated-preference/viewer/static-stated-preference-question.component.scss
+++ b/src/Traisi.Questions/src/stated-preference/viewer/static-stated-preference-question.component.scss
@@ -1,3 +1,21 @@
 :host {
 	
 }
+
+.static-sp-container {
+    .table-row {
+        display: table-row;
+    }
+
+    .table-cell {
+        display: table-cell;
+    }
+
+    .table-header {
+        display: table-header-group;
+    }
+
+    .table {
+        display: table;
+    }
+}
