--- a/src/Traisi.Questions/src/stated-preference/viewer/static-stated-preference-question.component.scss
+++ b/src/Traisi.Questions/src/stated-preference/viewer/static-stated-preference-question.component.scss
@@ -37,4 +37,12 @@
         text-align: center;
         border-top: solid 1px #BBB;
     }
+
+    .highlight {
+        background-color: rgb(210, 237, 255);
+    }
+
+    .clickable {
+        cursor: pointer;
+    }
 }
