Updated exporter for travel diary times

--- a/src/Traisi.Questions/src/stated-preference/viewer/static-stated-preference-question.component.scss
+++ b/src/Traisi.Questions/src/stated-preference/viewer/static-stated-preference-question.component.scss
@@ -7,6 +7,12 @@
         display: table-row;
     }
 
+    .static-sp-radio {
+        opacity: 1 !important;
+        height: auto;
+        width: auto;
+    }
+
     .table-cell {
         display: table-cell;
         padding: 5px;
